test/Fail/ShapeIrrelevantIndex.err
ShapeIrrelevantIndex.agda:13.22-23: error: [VariableIsIrrelevant]
Variable n is declared irrelevant, so it cannot be used here
when checking that the expression n has type Nat
